# discord-bot-nickname-activity-update-example

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-image.yml  reusable--docker-build.yaml
src/: main.rs
